# ProofPath

./: AI_SAFETY_PORTFOLIO.md  CHANGELOG.md  COMMUNITY_EXPERIMENTS.md  CONTRIBUTING.md  Cargo.toml  PR_DESCRIPTION.md  README.md  ROADMAP.md  action.yml
conformance/: README.md  authorization-record-export-v0.1.json  authorization-record-report-context-v0.1.json  manifest.json
crates/proofpath-gateway/: Cargo.toml  README.md
crates/proofpath-gateway/src/: main.rs
crates/proofpath-verifier/: Cargo.toml  README.md
crates/proofpath-verifier/src/: audit.rs  lib.rs  main.rs
docs/: AGENT_PAYMENT_GUARD_DEMO.md  ANTI_ULTRON_POSITIONING_NOTE.md  BUDGET_AND_MILESTONES.md  COMPUTE_WITNESS_GRANT_REVIEWER_PATH.md  ECOSYSTEM_GRAPH.md  EVIDENCE_METRICS_V0_1.md  EVIDENCE_PACKET_V0_1.md  GITHUB_ACTION_QUICKSTART.md  GRANT_MILESTONE_TRACKER.md  LANDING_V0_1.md  NGI_TALER_REVIEWER_PATH.md  README_REVIEWER_SECTION_PATCH.md  RELEASE_V0_1.md  REVIEWER_CHECKLIST_V0_1.md  REVIEWER_FIRST_SCREEN.md  START_HERE_V0_1.md  SUBMITTED_APPLICATION_REVIEWER_BRIDGE.md  TALER_ALIGNMENT.md  TRC_TPU_EVIDENCE_PLAN.md  agent-payment-guard-90-second-demo.md  agent-payment-guard-brief.md  agent-payment-guard-service.md  agent-payment-guard.md  architecture.md  audit-log-verification.md  community-call.md  compute-witness-environment.md  compute-witness-market-value.md  compute-witness-pilot-guide.md  compute-witness-rust-integration-spike.md  demo-transcript-payment-guard.md  demo-transcript.md  grant-positioning.md  internet-action-layer.md  launch-post.md  mock-payment-rail-demo.md  openapi.md  p3-verification-addendum.md  philosophy.md  reviewer-runbook.md  (+2 more)
openapi/: proofpath-guard-service-v0.1.yaml
reports/: README.md  action-boundary-fixture-2026-05-17.json  action-boundary-fixture-2026-05-17.md  evidence-metrics-2026-05-17-ci-baseline.json  evidence-metrics-2026-05-17-ci-baseline.md  evidence-metrics-template-v0.1.json
schemas/: payment-action-context.schema.json  proofpath-authorization-record-v0.1.schema.json  signed-human-intent-envelope.schema.json
scripts/: assert_action_boundary_metrics.py  check_authorization_record_export.py  check_conformance_fixtures.py  collect_action_boundary_metrics.py  export_payment_guard_evidence.py  run_live_action_boundary_check.sh  validate_compute_witness.py  verify_audit_log.py  verify_authorization_record_export.py
specs/: proofpath-http-profile-v0.1.md  (+3 more)
(+111 files in other folders)
