[package]
name = "proofpath-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Minimal Axum gateway for ProofPath HTTP actions"

[dependencies]
axum = "0.7"
proofpath-verifier = { path = "../proofpath-verifier" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }

[lints]
workspace = true
