[package]
name = "proofpath-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Minimal Axum gateway for ProofPath HTTP actions"

[dependencies]
axum = "0.7"
proofpath-verifier = { path = "../proofpath-verifier" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "fs", "io-util"] }
uuid = { version = "1", features = ["v4", "serde"] }

[lints]
workspace = true
