[package]
name = "proofpath-verifier"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Minimal verifier for ProofPath HTTP action context"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true
